// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass correct values to pymControl 1`] = `
Object {
  "id": "container-id",
  "title": "StreamEmbed",
  "url": "http://localhost/embed/stream?storyID=story-id&storyURL=story-url&commentID=comment-id&v=Test&ts=1589310900000",
}
`;

exports[`should pass default values to pymControl 1`] = `
Object {
  "id": "container-id",
  "title": "StreamEmbed",
  "url": "http://localhost/embed/stream?v=Test&ts=1589310900000",
}
`;
